; ModuleID = '/home/carl/AnghaBench/freebsd/sys/gnu/gcov/extr_gcc_4_7.c_gcov_info_is_compatible.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/gnu/gcov/extr_gcc_4_7.c_gcov_info_is_compatible.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gcov_info = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gcov_info_is_compatible(%struct.gcov_info* %0, %struct.gcov_info* %1) #0 {
  %3 = alloca %struct.gcov_info*, align 8
  %4 = alloca %struct.gcov_info*, align 8
  store %struct.gcov_info* %0, %struct.gcov_info** %3, align 8
  store %struct.gcov_info* %1, %struct.gcov_info** %4, align 8
  %5 = load %struct.gcov_info*, %struct.gcov_info** %3, align 8
  %6 = getelementptr inbounds %struct.gcov_info, %struct.gcov_info* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.gcov_info*, %struct.gcov_info** %4, align 8
  %9 = getelementptr inbounds %struct.gcov_info, %struct.gcov_info* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %7, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
